{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 52,
  "lineage": "2f1239f1-c7e5-ebef-99f7-fd83a18da169",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069505a882dc76457",
            "arn": "arn:aws:ec2:us-east-1:158711196866:elastic-ip/eipalloc-069505a882dc76457",
            "association_id": "eipassoc-06ed1ba7f6b6015f0",
            "domain": "vpc",
            "id": "eipalloc-069505a882dc76457",
            "instance": "i-00ad3340654d2c363",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08ceb95375f779dcd",
            "private_dns": "ip-10-0-1-185.ec2.internal",
            "private_ip": "10.0.1.185",
            "public_dns": "ec2-44-209-62-175.compute-1.amazonaws.com",
            "public_ip": "44.209.62.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "anoors-portfolio-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "anoors-portfolio-eip",
              "Project": "anoors-portfolio",
              "Scenario": "free-tier"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app",
            "aws_internet_gateway.main",
            "aws_key_pair.portfolio",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "tls_private_key.portfolio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:158711196866:instance/i-00ad3340654d2c363",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ad3340654d2c363",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "portfolio-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ceb95375f779dcd",
            "private_dns": "ip-10-0-1-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.185",
            "public_dns": "ec2-44-198-160-180.compute-1.amazonaws.com",
            "public_ip": "44.198.160.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:158711196866:key/38f9ecbe-37ae-4f7b-b0b7-0f81aef9f832",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "anoors-portfolio",
                  "Scenario": "free-tier"
                },
                "throughput": 0,
                "volume_id": "vol-0a9c65e2e654dd1c4",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068acf5ca97871e77",
            "tags": {
              "Name": "anoors-portfolio-server"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "anoors-portfolio-server",
              "Project": "anoors-portfolio",
              "Scenario": "free-tier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0e5cb4b91645f0910"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.portfolio",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "tls_private_key.portfolio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158711196866:internet-gateway/igw-021d9648478dba8a0",
            "id": "igw-021d9648478dba8a0",
            "owner_id": "158711196866",
            "tags": {
              "Name": "anoors-portfolio-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "anoors-portfolio-igw",
              "Project": "anoors-portfolio",
              "Scenario": "free-tier"
            },
            "vpc_id": "vpc-07595318f297c633f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158711196866:route-table/rtb-0789d9b04f0c0f871",
            "id": "rtb-0789d9b04f0c0f871",
            "owner_id": "158711196866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021d9648478dba8a0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anoors-portfolio-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "anoors-portfolio-public-rt",
              "Project": "anoors-portfolio",
              "Scenario": "free-tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-07595318f297c633f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f11b8e2c5194e850",
            "route_table_id": "rtb-0789d9b04f0c0f871",
            "subnet_id": "subnet-068acf5ca97871e77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158711196866:security-group/sg-0e5cb4b91645f0910",
            "description": "Security Group pour le serveur portfolio",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5cb4b91645f0910",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "anoors-portfolio-sg",
            "name_prefix": "",
            "owner_id": "158711196866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anoors-portfolio-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "anoors-portfolio-sg",
              "Project": "anoors-portfolio",
              "Scenario": "free-tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-07595318f297c633f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158711196866:subnet/subnet-068acf5ca97871e77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068acf5ca97871e77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "158711196866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anoors-portfolio-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "anoors-portfolio-public-subnet",
              "Project": "anoors-portfolio",
              "Scenario": "free-tier"
            },
            "vpc_id": "vpc-07595318f297c633f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158711196866:vpc/vpc-07595318f297c633f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057e5259b70fecf26",
            "default_route_table_id": "rtb-0e1b132d13fcfd35b",
            "default_security_group_id": "sg-0044fc2029a274733",
            "dhcp_options_id": "dopt-0de956a938be36c8b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07595318f297c633f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1b132d13fcfd35b",
            "owner_id": "158711196866",
            "tags": {
              "Name": "anoors-portfolio-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "anoors-portfolio-vpc",
              "Project": "anoors-portfolio",
              "Scenario": "free-tier"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}